created preprocessing pipeline

--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -21,28 +21,27 @@
                             <select class="form-select form-select-lg" aria-label="Default select example" name="domain"
                                 id="domain" required>
                                 <option selected disabled value="">Select Your Domain</option>
-                                <option value="mern stack">MERN Stack</option>
-                                <option value="mean stack">MEAN Stack</option>
-                                <option value="web development using python django + reacT">Django + React</option>
-                                <option value="mobile development using flutter">Mobile development with Flutter
+                                <option value="domain_mern">MERN Stack</option>
+                                <option value="domain_mean">MEAN Stack</option>
+                                <option value="domain_webdev_django_react">Django + React</option>
+                                <option value="domain_mobile_development_using_flutter">Mobile development with Flutter
                                 </option>
-                                <option value="web development using node.js express">Backend development with Node.js
+                                <option value="domain_webdev_nodejs">Backend development with Node.js
                                     and Express</option>
-                                <option value="web development using python django">Backend development with Django
+                                <option value="domain_webdev_django">Backend development with Django
                                 </option>
-                                <option value="cybersecurity">Cybersecurity</option>
-                                <option value="data science">Data Science</option>
-                                <option value="machine learning">Machine Learning</option>
-                                <option value="golang">Golang</option>
-                                <option value="game development using unity">Game Development with Unity</option>
-                                <option value="devops">Devops</option>
-                                <option value="mobile development using android kotlin">Mobile Development with Android
-                                    Kotlin</option>
-                                <option value="mobile development using swift">Mobile Development with Swift</option>
-                                <option value="blockchain">Blockchain </option>
-                                <option value="frontend development using react">Frontend Development with React
+                                <option value="domain_cybersecurity">Cybersecurity</option>
+                                <option value="domain_data_science">Data Science</option>
+                                <option value="domain_machine_learning">Machine Learning</option>
+                                <option value="domain_golang">Golang</option>
+                                <option value="game_developemnt">Game Development with Unity</option>
+                                <option value="domain_devops">Devops</option>
+                                <option value="domain_mob_dev_kotlin">Mobile Development with Kotlin</option>
+                                <option value="domain_mob_dev_swift">Mobile Development with Swift</option>
+                                <option value="domain_blockchain">Blockchain </option>
+                                <option value="domain_frontend_react">Frontend Development with React
                                 </option>
-                                <option value="web development using python django + angular">Web Development with
+                                <option value="domain_webdev_django_angular">Web Development with
                                     Django and Angular</option>
                             </select>
                         </div>
@@ -289,8 +288,8 @@
                             <select class="form-select form-select-lg" aria-label="Default select example"
                                 name="graduate" id="graduate" required>
                                 <option selected disabled value="">Did you complete 6/7 months program?</option>
-                                <option value="yes">Yes</option>
-                                <option value="no">No</option>
+                                <option value="1">Yes</option>
+                                <option value="0">No</option>
                             </select>
                         </div>
                     </div>
